--- a/Unity Audio Demo.csproj
+++ b/Unity Audio Demo.csproj
@@ -256,6 +256,7 @@
     <Compile Include="Assets\LowPolyNature\Scripts\ItemDragHandler.cs" />
     <Compile Include="Assets\LowPolyNature\Scripts\ItemDropHandler.cs" />
     <Compile Include="Assets\LowPolyNature\Scripts\LowPassRandomizer.cs" />
+    <Compile Include="Assets\LowPolyNature\Scripts\MusicController.cs" />
     <Compile Include="Assets\LowPolyNature\Scripts\PlayerController.cs" />
     <Compile Include="Assets\LowPolyNature\Scripts\PlayerFollow.cs" />
     <Compile Include="Assets\LowPolyNature\Scripts\RestartLevel.cs" />
