--- a/Unity Audio Demo.csproj
+++ b/Unity Audio Demo.csproj
@@ -224,6 +224,12 @@
     <Reference Include="UnityEngine.SpatialTracking">
       <HintPath>C:/Program Files/Unity/Hub/Editor/2017.4.7f1/Editor/Data/UnityExtensions/Unity/UnitySpatialTracking/RuntimeEditor/UnityEngine.SpatialTracking.dll</HintPath>
     </Reference>
+    <Reference Include="TextMeshPro-2017.3-Editor">
+      <HintPath>Assets/TextMesh Pro/Plugins/Editor DLL/TextMeshPro-2017.3-Editor.dll</HintPath>
+    </Reference>
+    <Reference Include="TextMeshPro-2017.3-Runtime">
+      <HintPath>Assets/TextMesh Pro/Plugins/Editor DLL/TextMeshPro-2017.3-Runtime.dll</HintPath>
+    </Reference>
     <Reference Include="UnityEngine.Analytics">
       <HintPath>C:/Users/gnomm/AppData/Local/Unity/cache/packages/packages.unity.com/com.unity.analytics@2.0.13/UnityEngine.Analytics.dll</HintPath>
     </Reference>
@@ -233,16 +239,12 @@
     <Reference Include="UnityEngine.StandardEvents">
       <HintPath>C:/Users/gnomm/AppData/Local/Unity/cache/packages/packages.unity.com/com.unity.standardevents@1.0.10/UnityEngine.StandardEvents.dll</HintPath>
     </Reference>
-    <Reference Include="TextMeshPro-2017.3-Runtime">
-      <HintPath>Assets/TextMesh Pro/Plugins/Editor DLL/TextMeshPro-2017.3-Runtime.dll</HintPath>
-    </Reference>
-    <Reference Include="TextMeshPro-2017.3-Editor">
-      <HintPath>Assets/TextMesh Pro/Plugins/Editor DLL/TextMeshPro-2017.3-Editor.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\LowPolyNature\Main Menu\MainMenu.cs" />
     <Compile Include="Assets\LowPolyNature\Scripts\AudioRandomController.cs" />
     <Compile Include="Assets\LowPolyNature\Scripts\AudioRandomControllerLPF.cs" />
+    <Compile Include="Assets\LowPolyNature\Scripts\AudioSettings.cs" />
     <Compile Include="Assets\LowPolyNature\Scripts\Axe.cs" />
     <Compile Include="Assets\LowPolyNature\Scripts\CameraDistance.cs" />
     <Compile Include="Assets\LowPolyNature\Scripts\Crate.cs" />
@@ -263,10 +265,14 @@
     <Compile Include="Assets\LowPolyNature\Scripts\ItemDropHandler.cs" />
     <Compile Include="Assets\LowPolyNature\Scripts\LowPassRandomizer.cs" />
     <Compile Include="Assets\LowPolyNature\Scripts\MusicController.cs" />
+    <Compile Include="Assets\LowPolyNature\Scripts\PauseMenu.cs" />
     <Compile Include="Assets\LowPolyNature\Scripts\PlayerController.cs" />
     <Compile Include="Assets\LowPolyNature\Scripts\PlayerFollow.cs" />
     <Compile Include="Assets\LowPolyNature\Scripts\RestartLevel.cs" />
     <Compile Include="Assets\LowPolyNature\Scripts\Sheep.cs" />
+    <Compile Include="Assets\LowPolyNature\Scripts\SliderVolume.cs" />
+    <Compile Include="Assets\MusicOff.cs" />
+    <Compile Include="Assets\MusicOn.cs" />
     <Compile Include="Assets\PostProcessing\Runtime\Attributes\GetSetAttribute.cs" />
     <Compile Include="Assets\PostProcessing\Runtime\Attributes\MinAttribute.cs" />
     <Compile Include="Assets\PostProcessing\Runtime\Attributes\TrackballAttribute.cs" />
